# skystore_fixed

./: blog_data.json  catalog_data.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_created_at_alter_blog_is_published_and_more.py  0003_alter_blog_created_at.py  0004_alter_blog_created_at.py  0005_alter_blog_created_at.py  0006_alter_blog_created_at.py  0007_alter_blog_created_at.py
blog/templates/blog/: blog_detail.html  blog_form.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_creation_date_and_more.py  0003_alter_product_creation_date_and_more.py  0004_alter_version_options_alter_product_creation_date_and_more.py  0005_alter_product_creation_date_and_more.py  0006_product_creator_alter_product_creation_date_and_more.py
catalog/templates/catalog/: base.html  category_list.html  contact_page.html  home_page.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  product_page.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: createsu.py
users/migrations/: 0001_initial.py  0002_user_token.py
users/templates/users/: email_sent.html  login.html  profile.html  register.html  verified.html
